ポートフォリオに必要な情報を追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,50 @@
     <title>Pixのポートフォリオ</title>
   </head>
   <body>
+    
     <h1>Pix</h1>
+
+    <h2>about</h2>
+    <p>
+      ただの大学生<br>
+      絵とか3Dの勉強をしようとしてます
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>名前：Pix</li>
+      <li>所在地：千葉県</li>
+      <li>得意領域：なし</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <td>Windows</td>
+      </tr>
+      <tr>
+        <th>Engine, Frameworks</th>
+        <td></td>
+      </tr>
+      <tr>
+        <th>Tool, Middlewere</th>
+        <td></td>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td>なし</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>なし</p>
+
+    <h3>Contact</h3>
+    <p>非公開</p>
+
+    <h3>History</h3>
+    <p>なし</p>
+    
   </body>
 </html>
